--- a/Jeu/package.json
+++ b/Jeu/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.19",
-    "interactjs": "^1.10.11"
+    "interactjs": "^1.10.11",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3"
   }
 }
