--- a/Serveur/package.json
+++ b/Serveur/package.json
@@ -4,8 +4,8 @@
   "description": "Serveur de données pour le jeu Scrumble",
   "main": "scrumble.js",
   "scripts": {
-    "start": "node ./scrumble.js",
-    "dev": "nodemon ./scrumble.js"
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,8 @@
   "homepage": "https://github.com/FabriqueNumerique/Scrumble#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^4.1.3"
   },
   "devDependencies": {
     "@interactjs/types": "^1.10.11",
