--- a/Serveur/package.json
+++ b/Serveur/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/FabriqueNumerique/Scrumble#readme",
   "dependencies": {
+    "@socket.io/admin-ui": "^0.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "socket.io": "^4.1.3"
