--- a/Serveur/package.json
+++ b/Serveur/package.json
@@ -25,8 +25,10 @@
   "homepage": "https://github.com/FabriqueNumerique/Scrumble#readme",
   "dependencies": {
     "@socket.io/admin-ui": "^0.2.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mysql2": "^2.3.0",
     "socket.io": "^4.1.3"
   },
   "devDependencies": {
