--- a/Serveur/package.json
+++ b/Serveur/package.json
@@ -24,11 +24,18 @@
   },
   "homepage": "https://github.com/FabriqueNumerique/Scrumble#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@socket.io/admin-ui": "^0.2.0",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.7",
     "mysql2": "^2.3.0",
+    "save": "^2.4.0",
     "socket.io": "^4.1.3"
   },
   "devDependencies": {
